--- a/papers/GdMn2O5/GdMn2O5.tex
+++ b/papers/GdMn2O5/GdMn2O5.tex
@@ -165,7 +165,7 @@ During the up-down-up-down field sweeps, we find that four different states are 
 \\\\
 At this stage, we would like to draw the attention of the reader to two facts.
 
-First, compared to the usual magnetoelectric switching with one low-field state and one high-field state, here a single up--down cycle of the field reverses the polarization, and correspondingly leads to a different final state.
+First, compared to the usual magnetoelectric switching with one low field state and one high field state, here a single up--down cycle of the field reverses the polarization, and correspondingly leads to a different final state.
 In order to return the system to its original configuration another up--down cycle is required.
 
 Second, this four state loop is fully deterministic, meaning that when multiple such double cycles are applied, the system tracks close to exactly the same $P_b$ loop every time.
@@ -488,19 +488,19 @@ Indeed, starting at state 2, when $H<H^*$ as the field decreases, this leads to 
     \caption{\label{fig:GdMn2O5_spin_configs}{\bf Magnetic configurations at $\phi_H =  10^\circ$.} The configurations corresponding to the four states are labeled by the numbers in the top left corner of each panel. Gd ions are displayed in green, Mn in purple. The cyan lines highlight the orientation of the chains. A Mn ion of chain $L_1$ and neighboring Gd ion are highlighted by the red ellipse to demonstrate the 360$^\circ$ rotation in 90$^\circ$ increments.  }
     \label{fig:GdMn2O5_4configs}
 \end{figure}
-Now that we have a firm grasp of the energetics of the problem, we turn to an investigation of the behavior of the spins that results from it.
+Now that we have a firm grasp on the energetics of the problem, we turn to an investigation of the behavior of the spins that results from it.
 Again, we focus first on the most interesting situation of the magic angle regime at $\phi_H=10^\circ$.
 The magnetic configurations for the four states that are sequentially visited are shown in Fig.~\ref{fig:GdMn2O5_4configs}.
-In the low-field states 1 and 3, Mn spins align closely with the anisotropy axes of the two chains.
-The Gd spins (green) align in general largely antiferromagnetically with the closest Mn ion (purple) of the chain that they are coupled strongest to ($v_1$ in Fig.~\ref{fig:GdMn2O5_unit_cell}(a)).
-This causes a roughly left left right right sequence of the Gd spins along the $a$-axis at low field. 
+In the low field states 1 and 3, Mn spins align closely with the anisotropy axes of the two chains.
+The Gd spins (green) align in largely antiferromagnetically with the closest Mn ion (purple) of the chain that they are most strongly coupled to ($v_1$ in Fig.~\ref{fig:GdMn2O5_unit_cell}(a)).
+This causes a roughly left--left--right--right sequence of the Gd spins along the $a$-axis at low field. 
 
-In the high-field states 2 and 4, Mn spins are nearly orthogonal to the magnetic field, in order to maximize the gain on Zeeman energy (see Eq.~\eqref{eq:GdMn2O5_Zeeman}).
+In the high field states 2 and 4, Mn spins are nearly orthogonal to the magnetic field, in order to maximize the gain on Zeeman energy (see Eq.~\eqref{eq:GdMn2O5_Zeeman}).
 The Gd spins in this case are again influenced mostly by the antiferromagnetic exchange with the nearest Mn ion, but they are tilted towards the field due to the Zeeman interaction.
 The higher the strength of the applied field, the more will the Gd spins align with it.
 \\\\
 As could already be deduced from our earlier discussion on the trajectory through the ($\phi_{L_1}$, $\phi_{L_2}$) space (Fig.~\ref{fig:GdMn2O5_heatmap}), we can observe that the spins associated with $\bm L_1$ perform a unidirectional rotation during the up--down field sweeps.
-The Gd spins that are coupled strongest to this chain through $v_1$ perform a similar rotational motion, but with less well-defined increments.
+The Gd spins that are coupled strongest to this chain perform a similar rotational motion, but with less well-defined increments.
 % The spins of the other chain, $\bm L_2$ seem to only toggle between two states, and a similar behavior can be observed for the Gd spins coupled most strongly to it.
 Indeed, focusing on the highlighted spins in Fig.~\ref{fig:GdMn2O5_4configs}, we see that the chains rotate with increments of around 90$^\circ$ between the states, performing a full 360$^\circ$ rotation by the time they arrive back at the original configuration.
 \begin{figure}
@@ -511,19 +511,19 @@ This peculiar ``crankshaft''-like behavior is a direct result of the evolution o
 We use this crankshaft analogy because the material seemingly converts the linear up--down motion of the magnetic field (the ``piston'') into the circular motion performed by the spins (the ``driveshaft'').
 \\\\
 This brings us to the final remark we wish to make on the motion of the spins.
-By applying the field at a negative magic angle $\phi_H = -10^\circ$, we find that $\bm L_2$ now performs the full cycle rotation, along with the Gd spins that it couples strongest with, leading to the same four state switching loop as for $\phi_H = 10^\circ$ (compare panels (a,b) in Fig.~\ref{fig:GdMn2O5_experiment2}).
+By applying the field at a negative magic angle $\phi_H = -10^\circ$, we find that $\bm L_2$ now performs the full cycle rotation, along with the Gd spins that it couples strongest with, leading to the same magnetoelectric hysteresis loop as for $\phi_H = 10^\circ$ (compare panels (a,b) in Fig.~\ref{fig:GdMn2O5_experiment2}).
 This behavior follows from another symmetry operation that is present in the system: the $\tilde{2}_x$ crystal symmetry combined with a translation by $a$, $S_a$, under which $(L_1^x,L_1^y) \rightarrow (L_2^x,-L_2^y)$.
-In this case, horizontal valleys appear in the potential energy landscape instead of the vertical ones in Figs.~\ref{fig:GdMn2O5_theory}(d-f) and ~\ref{fig:GdMn2O5_heatmap}.
+In this case, horizontal valleys would appear in the potential energy landscape instead of the vertical ones in Figs.~\ref{fig:GdMn2O5_trajectories} and ~\ref{fig:GdMn2O5_heatmap}.
 Accordingly, $\bm{L}_2$ at this negative magic angle rotates in the opposite direction compared to  $\bm{L}_1$ at $\phi_{\rm H} = +10^\circ$.
 The rotation direction is unchanged under the magnetic field reversal ($\bm{L}_{1,2}$ is invariant under $T$ combined with $S_a$, whereas $\bm{H}$ changes sign), and under the combined reversal of $\bm{L}_{1}$ and $\bm{L}_{2}$.
-The left panels of Figure~\ref{fig:GdMn2O5_regimes} summarizes all the switching regimes found in GdMn$_2$O$_5$.
+These considerations are brought together in the left panels of Figure~\ref{fig:GdMn2O5_regimes}, summarizing all the switching regimes found in GdMn$_2$O$_5$.
 Notice how all field cycling procedures depicted in panel (a) lead to the same spin behavior.
 \\\\
 %
 Since the ferroelectric polarization $P_b$ is a direct result of the magnetic configuration, we briefly comment on how these different switching behaviors for the spin are translated in to the plots of the polarization in Fig.~\ref{fig:GdMn2O5_theory} and Fig.~\ref{fig:GdMn2O5_experiment1}.
-Most of the evolution of $P_b$ can be understood from the $\bm L_1 \cdot \bm L_2$ part. The contribution arising from the Gd--Mn exchange striction behaves similarly due to strong coupling between them ($v_1$), with an additional superposed contribution due to the slight rotations that the Gd spins perform away from the switching fields.
+Most of the evolution of $P_b$ can be understood from the $\bm L_1 \cdot \bm L_2$ part. The contribution arising from the Gd--Mn exchange striction behaves similarly due to strong coupling between them ($v_1$), with an additional superposed contribution due to the slight rotations that the Gd spins perform away from the switching field strength $|H| \sim 5$ T.
 At $\phi_{\rm H} = \pm 20^\circ$, both N\'eel vectors $\bm L_\alpha$ toggle between two directions in such a way that the angle between them and, hence, the ferroelectric polarization changes very little (Figs.~\ref{fig:GdMn2O5_regimes}(b,f),~\ref{fig:GdMn2O5_experiment1}(c), and~\ref{fig:GdMn2O5_theory}(c)). 
-On the other hand, at $\phi_{H}=0^\circ$, $\bm{L}_1$ and  $\bm{L}_2$ tilt in opposite directions. The resulting large variation of the angle between these two vectors gives rise to the two state switching with the polarization reversal, as shown in Figs.~\ref{fig:GdMn2O5_regimes}(d),~\ref{fig:GdMn2O5_experiment1}(a), and ~\ref{fig:GdMn2O5_theory}(a). This suggests that the small-amplitude relative rotation of $\bm{L}_1$ and $\bm{L}_2$ is an electromagnon mode that could be excited by oscillating $H_a$ or $E_b$.
+On the other hand, at $\phi_{H}=0^\circ$, $\bm{L}_1$ and  $\bm{L}_2$ tilt in opposite directions. The resulting large variation of the angle between these two vectors gives rise to the two state switching with the polarization reversal (Figs.~\ref{fig:GdMn2O5_regimes}(d),~\ref{fig:GdMn2O5_experiment1}(a), and ~\ref{fig:GdMn2O5_theory}(a)). This suggests that the small-amplitude relative rotation of $\bm{L}_1$ and $\bm{L}_2$ is an electromagnon mode that could be excited by oscillating $H_a$ or $E_b$.
 On the boundary between the two extremes one of the $\bm L_\alpha$ toggles while the other performs the full 360$^\circ$ rotation, leading to the four state polarization loops.
 %
 %
